--- a/themes/md3/scrollbar.css
+++ b/themes/md3/scrollbar.css
@@ -6,7 +6,7 @@ scrollbar {
 }
 
 scrollbar.vertical {
-  margin: 0 0.6em;
+  margin: 0 0.4em;
 }
 
 #usercss-box scrollbar.vertical {
@@ -27,7 +27,7 @@ scrollbar.vertical:hover slider {
 }
 
 scrollbar.horizontal {
-  margin: 0.6em 0;
+  margin: 0.4em 0;
 }
 
 scrollbar.horizontal slider {
